# fractal

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.c  app.h  app_utils.c  coloring.c  coloring.h  config.c  config.h  delta_draw.c  delta_draw.h  drawing.c  drawing.h  events.c  events.h  fractal_functions.c  fractal_functions.h  fractal_list.c  fractal_list.h  gradient.c  gradient.h  gradient_definitions.c  gradient_definitions.h  julia_functions.c  key_event.c  key_event.h  main.c  mandelbrot_functions.c  mouse_events.c  mouse_events.h  multithreading.c  multithreading.h  patch_mlx.sh  real_drawing.c  rgb.c  rgb.h  t_double2.c  t_double2.h  (+6 more)
libft/: Makefile  ft_memmove.c  ft_memzero.c  ft_puts.c  ft_putstr.c  ft_strequ.c  ft_strlen.c  libft.h
